<resources>
    <string name="app_name">Gymfinite Demo</string>
    <string name="textView_name">Save</string>
    <string name="login">login</string>
    <string name="usernameHint">LOGIN</string>
    <string name="passwordHint">PASSWORD</string>
    <string name="guestPage">GUEST</string>
    <string name="checkIn">CHECK-IN</string>
    <string name="back_button_desc">back button</string>
    <string name="settings_button_desc">settings button</string>
    <string name="camera_button_desc">camera button</string>
    <string name="search_button_desc">search button</string>
    <string name="user_one">Seth Finley</string>
    <string name="user_mail">sethfinley@mail.com</string>
    <string name="user_address">USA</string>
    <string name="success_text">OK</string>
    <string name="user_id">123456789</string>
    <string name="fail_text">NO</string>
    <string name="invalid_text">INVALID</string>
    <string name="setting_text">SETTING</string>
    <string name="event">first event</string>
    <string name="change_text">change</string>
    <string name="logout_text">logout</string>
    <string name="guest_list">GUEST LIST</string>
</resources>
