<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/guestText"
        android:text="@string/guestPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="16sp"
        android:textColor="@color/colorBackground"
        android:background="@color/colorTextDark"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_margin="12dp"/>
    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:src="@drawable/search_24"
        android:background="@color/colorBackground"
        android:layout_margin="12dp"
        android:contentDescription="@string/search_button_desc"/>

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/camera_24"
        android:background="@color/colorBackground"
        android:layout_margin="12dp"
        android:contentDescription="@string/camera_button_desc"/>

    <Button
        android:id="@+id/check_inButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:background="@color/colorBackground"
        android:text="@string/checkIn"
        android:textColor="@color/colorTextButton"
        android:textSize="32sp"
         />
    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/settings_24"
        android:background="@color/colorBackground"
        android:layout_margin="12dp"
        android:contentDescription="@string/settings_button_desc"/>
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_48"
        android:background="@color/colorBackground"
        android:layout_below="@+id/guestText"
        android:padding="12dp"
        android:contentDescription="@string/back_button_desc"
        />
    <LinearLayout
        android:layout_below="@+id/guestText"
        android:layout_toEndOf="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_one"
            android:textColor="@color/colorTextLight"
            android:textSize="28sp"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_mail"
            android:textColor="@color/colorTextLight"
            android:textSize="20sp"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_address"
            android:textColor="@color/colorTextLight"
            android:textSize="16sp"
            android:padding="4dp"/>

    </LinearLayout>



</RelativeLayout>