<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="2dp"
        android:paddingBottom="3dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorBackground"
        android:background="@color/colorTextDark"
        android:text="@string/login"
        android:textSize="16sp"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        >
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@color/colorTextDark"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:textColor="@color/colorTextDark"
        android:textAlignment="center"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@color/colorTextDark"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="@color/colorTextDark"
        android:textAlignment="center"
        android:textSize="28dp"/>

    <Button
        android:id="@+id/login-button"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorTextButton"
        android:background="@color/colorBackground"
        android:textSize="24sp"
        android:textAllCaps="false"/>

    </LinearLayout>




</LinearLayout>